kubernetes/apps/default/nginx/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
    kubernetes.io/ingress.class: "nginx"
  generation: 1
  name: nginx
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dancer.solutions
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 8080
            path: /
            pathType: Prefix
